# dll-sdk

./: README.md
sdk/: CMakeLists.txt
sdk/src/: main.c  sdk.h
sdk/src/api/: api.c  api.h  kernel.c  pe.h  string.c
